--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,7 +4,7 @@
   "main": "src/server.js",
   "license": "MIT",
   "scripts": {
-    "start": "serverless offline start",
+    "start": "nodemon --exec \"serverless offline start\" -e \"js yml json\"",
     "test": "jest",
     "lint": "eslint './src/**/*.js'",
     "deploy:staging": "serverless deploy --stage staging",
@@ -26,6 +26,7 @@
     "eslint-plugin-jest": "^23.20.0",
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "24.9.0",
+    "nodemon": "^2.0.4",
     "prettier": "^2.0.5",
     "serverless": "^1.78.1",
     "serverless-offline": "^6.5.0",
