--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,9 +6,6 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "lodash": "^4.17.19",
     "prop-types": "^15.7.2",
@@ -22,7 +19,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --coverage",
+    "test": "react-scripts test --coverage --env=jest-environment-jsdom-sixteen",
     "lint": "eslint './src/**/*.{js,jsx}'"
   },
   "eslintConfig": {
@@ -32,6 +29,10 @@
     "./src/**/*.{js,jsx}": "eslint --cache"
   },
   "devDependencies": {
+    "@testing-library/dom": ">=7.21.4",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "10.4.8",
+    "@testing-library/user-event": "12.1.1",
     "eslint-config-airbnb": "18.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-loader": "^4.0.2",
@@ -42,8 +43,11 @@
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "4.0.0",
     "husky": "^4.2.5",
+    "jest-environment-jsdom-sixteen": "^1.0.3",
     "lint-staged": "^10.2.11",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "react": "*",
+    "react-dom": "*"
   },
   "browserslist": {
     "production": [
